--- a/src/styles/lib/common.scss
+++ b/src/styles/lib/common.scss
@@ -1,6 +1,6 @@
 $default-border-radius: 1rem;
 
 // Padding
-$medium-padding: 0 0.75rem;
-$large-padding: 0 1rem;
-$small-padding: 0 0.5rem;
+$padding-medium: 0 0.75rem;
+$padding-large: 0 1rem;
+$padding-small: 0 0.5rem;
