--- a/src/styles/lib/common.scss
+++ b/src/styles/lib/common.scss
@@ -4,3 +4,20 @@ $default-border-radius: 1rem;
 $padding-medium: 0 0.75rem;
 $padding-large: 0 1rem;
 $padding-small: 0 0.5rem;
+
+.woozdesign {
+  --padding-small: #{$padding-small};
+  --padding-medium: #{$padding-medium};
+  --padding-large: #{$padding-large};
+}
+
+.woozdesign-dark {
+  --padding-small: #{$padding-small};
+  --padding-medium: #{$padding-medium};
+  --padding-large: #{$padding-large};
+}
+.woozdesign-light {
+  --padding-small: #{$padding-small};
+  --padding-medium: #{$padding-medium};
+  --padding-large: #{$padding-large};
+}
