--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -6,28 +6,56 @@
   overflow: hidden;
   position: relative;
   text-align: left;
-  background-color: $bg-dark;
-  color: $text-on-bg;
+  background-color: var(--color-slate-100);
+  color: var(--color-on-surface);
   height: 100%;
-
   border-radius: $default-border-radius;
+  &--small {
+    // font-size: var(--font-size-5); // Adjust as necessary
+    padding: 0.5rem; // Adjust as necessary
+  }
 
+  &--medium {
+    // font-size: var(--font-size-4);
+    padding: 1rem;
+  }
+
+  &--large {
+    // font-size: var(--font-size-3); // Adjust as necessary
+    padding: 1.5rem; // Adjust as necessary
+  }
   img {
     width: 100%;
     object-fit: cover;
   }
-  .title {
+
+  .heading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 1rem;
-    font-weight: bold;
+    background-color: var(--color-surface);
+
+    border-bottom: 1px solid var(--color-outline);
+
+    .heading-title {
+      font-weight: bold;
+    }
+    .heading-subtitle {
+      color: $text-secondary;
+    }
+    .heading-action {
+      display: flex;
+      align-items: center;
+    }
   }
-  .subtitle {
-    padding: 0 1rem;
-    font-size: var(--font-size-4);
-    color: $text-secondary;
-  }
-  .text {
+
+  .body {
     padding: 1rem;
-    font-size: var(--font-size-4);
+
+    .description {
+      font-size: var(--font-size-4);
+    }
   }
 
   .actions {
@@ -35,12 +63,10 @@
     flex-direction: row;
     gap: 1rem;
     padding: 1rem;
+    border-top: 1px solid var(--color-outline);
   }
 
-  .content {
-    padding: 1rem;
-  }
   &--outlined {
-    border: 1px solid $bg-light;
+    border: 1px solid var(--color-outline);
   }
 }
