--- a/src/styles/lib/common.scss
+++ b/src/styles/lib/common.scss
@@ -1,4 +1,4 @@
-$default-border-radius: 1rem;
+$border-radius-medium: 1rem;
 
 // Padding
 $padding-medium: 0 0.75rem;
@@ -6,6 +6,7 @@ $padding-large: 0 1rem;
 $padding-small: 0 0.5rem;
 
 .woozdesign {
+  --border-radius-medium: #{$border-radius-medium};
   --padding-small: #{$padding-small};
   --padding-medium: #{$padding-medium};
   --padding-large: #{$padding-large};
