--- a/src/styles/lib/typography.scss
+++ b/src/styles/lib/typography.scss
@@ -71,7 +71,7 @@ $font-size-lg-8: 3.5rem;
 }
 
 .woozdesign-dark {
-  font-family: 'Times New Roman';
+  font-family: 'Inter';
   --font-size-1: #{$font-size-1};
   --font-size-2: #{$font-size-2};
   --font-size-3: #{$font-size-3};
