--- a/src/components/Button/styles/SecondaryButton.module.scss
+++ b/src/components/Button/styles/SecondaryButton.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/lib/colors';
 
 .button--secondary {
-  @each $variant, $colors in $color-variants {
+  @each $variant, $colors in $color-button {
     &--color-#{$variant} {
       color: map-get($colors, color);
       background-color: rgba(map-get($colors, color), 0.2);
