--- a/src/components/Button/styles/SecondaryButton.module.scss
+++ b/src/components/Button/styles/SecondaryButton.module.scss
@@ -1,29 +1,24 @@
-@import '@/styles/lib/colors';
-
 .button--secondary {
-  @each $variant, $colors in $color-button {
-    &--color-#{$variant} {
-      color: map-get($colors, color);
-      background-color: rgba(map-get($colors, color), 0.2);
+  color: var(--color-accent-110);
+  background-color: var(--color-accent-40);
 
-      &:hover {
-        background-color: rgba(map-get($colors, hover), 0.2);
-      }
+  &:hover {
+    background-color: var(--color-accent-50);
+  }
 
-      &:active {
-        background-color: rgba(map-get($colors, active), 0.2);
-        box-shadow: boxShadow(map-get($colors, color));
-      }
+  &:active {
+    background-color: var(--color-accent-30);
 
-      &:focus {
-      }
-      > .icon-prepend {
-        fill: map-get($colors, color);
-      }
+    box-shadow: boxShadowAlpha(var(--color-accent-110));
+  }
 
-      > .icon-append {
-        fill: map-get($colors, color);
-      }
-    }
+  &:focus {
+  }
+  > .icon-prepend {
+    fill: var(--color-accent-90);
+  }
+
+  > .icon-append {
+    fill: var(--color-accent-90);
   }
 }
