--- a/src/components/Button/styles/OutlinedButton.module.scss
+++ b/src/components/Button/styles/OutlinedButton.module.scss
@@ -1,36 +1,30 @@
-@import '@/styles/lib/colors';
-
 .button--outlined {
   background-color: transparent;
   transition:
     all 0.2s,
     box-shadow 0.08s ease-in;
 
-  @each $variant, $colors in $color-button {
-    &--color-#{$variant} {
-      background-color: transparent;
-      color: map-get($colors, color);
-      border: 1px solid map-get($colors, outline) !important;
+  background-color: transparent;
+  color: var(--color-accent-110);
+  border: 1px solid var(--color-accent-70);
 
-      &:hover {
-        border-color: map-get($colors, hover);
-      }
+  &:hover {
+    border-color: var(--color-accent-100);
+  }
 
-      &:active {
-        border-color: map-get($colors, active);
-        box-shadow: boxShadow(map-get($colors, color));
-      }
+  &:active {
+    border-color: var(--color-accent-80);
+    box-shadow: boxShadowAlpha(var(--color-accent-80));
+  }
 
-      &:focus {
-      }
+  &:focus {
+  }
 
-      > .icon-prepend {
-        color: map-get($colors, color);
-      }
+  > .icon-prepend {
+    color: var(--color-accent-110);
+  }
 
-      > .icon-append {
-        color: map-get($colors, color);
-      }
-    }
+  > .icon-append {
+    color: var(--color-accent-110);
   }
 }
