--- a/src/components/Button/styles/TextButton.module.scss
+++ b/src/components/Button/styles/TextButton.module.scss
@@ -1,31 +1,25 @@
-@import '@/styles/lib/colors';
-
 .button--text {
-  @each $variant, $colors in $color-button {
-    &--color-#{$variant} {
-      color: map-get($colors, color);
-      background-color: transparent;
-      // background-color: rgba(map-get($colors, color), 0.2);
+  color: var(--color-accent-90);
+  background-color: transparent;
+  // background-color: rgba(var(--color-accent-90), 0.2);
 
-      &:hover {
-        background-color: rgba(map-get($colors, hover), 0.2);
-      }
+  &:hover {
+    background-color: var(--color-accent-40);
+  }
 
-      &:active {
-        // background-color: rgba(map-get($colors, active), 0.2);
-        box-shadow: boxShadow(map-get($colors, color));
-      }
+  &:active {
+    // background-color: rgba(var(--color-accent-80), 0.2);
+    box-shadow: boxShadowAlpha(var(--color-accent-90));
+  }
 
-      &:focus {
-        // box-shadow: boxShadow(map-get($colors, color));
-      }
-      > .icon-prepend {
-        fill: map-get($colors, color);
-      }
+  &:focus {
+    // box-shadow: boxShadow(var(--color-accent-90));
+  }
+  > .icon-prepend {
+    fill: var(--color-accent-90);
+  }
 
-      > .icon-append {
-        fill: map-get($colors, color);
-      }
-    }
+  > .icon-append {
+    fill: var(--color-accent-90);
   }
 }
