Typo, TextField color changed

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,3 +1,4 @@
+@import '@/styles/lib/functions';
 @import './styles/BaseButton.module.scss';
 @import './styles/PrimaryButton.module.scss';
 @import './styles/SecondaryButton.module.scss';
