--- a/src/components/Typography/Typography.module.scss
+++ b/src/components/Typography/Typography.module.scss
@@ -2,7 +2,7 @@
 $title-margin: 1rem 0;
 
 // Mixins
-@mixin titleStyles($fontSize, $color: black) {
+@mixin titleStyles($fontSize, $color: var(--color-accent-90-contrast)) {
   font-size: $fontSize;
   margin: $title-margin;
   color: $color;
@@ -38,12 +38,12 @@ $title-margin: 1rem 0;
 // Text styles
 .text {
   &-primary {
-    @include textStyle(var(--color-accent-color), var(--font-size-4));
+    @include textStyle(var(--color-accent-90), var(--font-size-4));
   }
   &-secondary {
     @include textStyle(var(--color-gray-80), var(--font-size-4));
   }
   &-default {
-    @include textStyle(black, var(--font-size-4));
+    @include textStyle(var(--color-accent-90-contrast), var(--font-size-4));
   }
 }
